# Modbus-PI-Pico-FreeRTOS

./: .gitmodules  CMakeLists.txt  README.md
MODBUS-LIB/Inc/: Modbus.h
MODBUS-LIB/Src/: Modbus.c
include/: FreeRTOSConfig.h
src/: main.cpp
src/FreeRTOS_Support_Files/: IdleMemory.c
